# MapLap_2

./: CMakeLists.txt  math_of_ellipse.txt
include/: Circle.hpp  CircleDetector.hpp  Line.hpp  LineDetector.hpp  PointVector.hpp  Writer.h
include/detector/: BoolImage.hpp  Circle.hpp  CircleDetector.hpp  Detector.hpp  Ellipse.hpp  EllipseDetector.hpp  Fraction.hpp  Line.hpp  LineDetector.hpp  PointVector.hpp  Preprocessing.hpp  Settings.hpp  TangentsDetector.hpp  Timer.hpp
include/shapes/: Ellipse.hpp  Line.hpp
src/: Circle.cpp  CircleDetector.cpp  Line.cpp  LineDetector.cpp  PointVector.cpp  Writer.cpp  main.cpp
src/detector/: BoolImage.cpp  Circle.cpp  CircleDetector.cpp  Detector.cpp  Ellipse.cpp  EllipseDetector.cpp  Fraction.cpp  Line.cpp  LineDetector.cpp  PointVector.cpp  Preprocessing.cpp  Settings.cpp  TangentsDetector.cpp  Timer.cpp
src/shapes/: Ellipse.cpp  Line.cpp  PointVector.cpp
test/: TestAll.cpp  TestFration.cpp  TestLine.cpp  TestPointVector.cpp  TestPreprocessing.cpp
